<resources>
    <string name="app_name">Rhythm</string>
    <string name="duration_format">%1$s &#47; %2$s</string>
    <string name="home">Home</string>
    <string name="artists">Artists</string>
    <string name="loading_message">Updating Music Archive</string>

    <!-- Pref keys-->
    <string name="first_time_pref_key">firstTimeLaunched</string>
    <string name="search">Search</string>
    <string name="repeat_mode">Repeat Mode</string>
    <string name="shuffle_mode">Shuffle Mode</string>
    <string name="library">Library</string>
    <string name="playlists">Playlists</string>
    <string name="now_playing">Now Playing</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="albums">Albums</string>
    <string name="select">Select</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="github_project">Github Project</string>
    <string name="about_message">Rhythm is an open source music player, based on the design of the very talented Alexandr Demidov. Developed by Laith Nurie</string>
    <string name="read_permission_storage">This app requires the storage permission in order to access your audio files.</string>
    <string name="github_message">You can contribute or report any bugs on Github</string>
    <string name="design_page">Design Page</string>
    <string name="last_played">Last Played</string>
    <string name="most_played">Most Played</string>
    <string name="delete_playlists">Delete Playlists</string>
    <string name="realm_licence">Realm Java is published under the Apache 2.0 license. The underlying core is available under the Realm Core Binary License while we work to open-source it under the Apache 2.0 license.</string>
    <string name="apache_licence">Licensed under the Apache License, Version 2.0 (the \"License\");
        \n\nyou may not use this file except in compliance with the License. You may obtain a copy of the License at
        http://www.apache.org/licenses/LICENSE-2.0  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="circle_imageview_licence">Copyright 2014 – 2015 Henning Dodenhof</string>
    <string name="android_support_libraries">Android Support Libraries</string>
    <string name="android_open_source">Copyright © 2006 The Android Open Source Project</string>
    <string name="android_support_libs">Appcompat-v7 \nPalette-v7 \nDesign \nRecyclerView-v7</string>
    <string name="no_songs_added">No Songs Added</string>
    <string name="remove">Remove</string>
    <string name="licences">Licences:</string>
    <string name="realm">Realm</string>
    <string name="circleimageview">CircleImageView</string>
    <string name="leakcanary">LeakCanary</string>
    <string name="copyright_square">Copyright 2015 Square, Inc.</string>
    <string name="no_music_found">No Music Found</string>
    <string name="no_albums_added">No Albums Added</string>
    <string name="no_playlists_added">No Playlists Added</string>
    <string name="no_search_results">No Search Results</string>
</resources>
