<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.BrowseActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".BrowseActivity">

        <include layout="@layout/toolbar" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical"
                android:weightSum="10">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="9">

                    <com.laithlab.rhythm.customview.RhythmTextView
                        android:id="@+id/no_music_added"
                        android:textColor="@color/color_primary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/no_music_found"
                        android:textSize="20sp" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/browse_grid"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="10">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2">

                    <View
                        android:id="@+id/tilted_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="-50dp"
                        android:background="@color/color_primary"
                        android:rotation="@integer/tilting_angle"
                        android:transformPivotX="0dp"
                        android:transformPivotY="0dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                        <com.laithlab.rhythm.customview.RhythmTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/artists"
                            android:textColor="@color/white"
                            android:textSize="40sp"
                            app:textType="regular" />

                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/loadingContainer"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@color/color_primary"
                android:orientation="horizontal"
                android:visibility="gone"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/loading_message"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/loadingProgess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:indeterminateBehavior="repeat"
                    tools:visibility="visible" />
            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

    <include layout="@layout/navigation_menu" />

</android.support.v4.widget.DrawerLayout>